Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75017

QtRO processes can crash if type registration is incorrect

    XMLWordPrintable

Details

    • All
    • 539a087eb099181630b5f5bd20d41a7b4bd45b66 (qt/qtremoteobjects/5.12)

    Description

      For dynamic Replicas, it is necessary for the Source to send information about any unique types to the Replicas so the receiving Node can dynamically create metatypes and register them.  Without this registration, the types may fail to be decoded, causes timeouts or crashes of the client application.

      Using a node set up as a Proxy, which uses dynamic Replicas extensively, is particularly susceptible to this issue.

      Attachments

        For Gerrit Dashboard: QTBUG-75017
        # Subject Branch Project Status CR V

        Activity

          People

            bstottle Brett Stottlemyer
            bstottle Brett Stottlemyer
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes